umap/static/umap/map.css
/* ... */
.umap-browser summary {
    margin-bottom: 0;
    overflow: hidden;
    padding-inline-start: 5px;
    height: 30px;
    line-height: 30px;
    background-color: var(--color-lightGray);
}
.umap-browser .off summary {
    color: #b3b3b3;
}

.umap-browser li {
    padding: 2px 0;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}
.umap-browser .datalayer li:nth-child(even) {
    background-color: #efefef;
}
.umap-browser.dark .datalayer li:nth-child(even) {
    background-color: #2c3233;
}
.umap-browser .datalayer .feature-color {
    box-shadow: 0 0 2px 0 black inset;
    cursor: inherit;
    -moz-box-sizing:border-box;
    -webkit-box-sizing:border-box;
    box-sizing: border-box;
    display: inline-block;
    padding: 0;
    width: 24px;
    text-align: center;
    margin-inline-start: 5px;
}
.umap-browser .marker .feature-color {
    background: none;
}
.umap-browser.dark .datalayer .feature-color {
    box-shadow: 0 0 2px 0 #999 inset;
}
.umap-browser .datalayer .feature-color img {
    width: 24px;
}
.umap-browser .datalayer .feature-color span {
    font-style: normal;
    font-weight: bold;
}
.umap-browser .datalayer-toggle-list {
    float: inline-end;
    margin-inline-end: 5px;
    background-position: -145px -70px;
}
.umap-browser .filters summary {
    background: none;
    border: 1px solid var(--color-lightGray);
    width: fit-content;
    padding: 0 10px;
    margin-bottom: var(--block-margin);
}
.umap-browser .filters summary {
    list-style: none;
    display: inline-block;
}
.umap-browser details[open].filters summary {
    margin-bottom: -1px;
    border-bottom: 1px solid var(--background-color);
}
.datalayer-name {
    cursor: pointer;
}
.umap-caption .dates {
    color: var(--color-mediumGray);
}
.umap-caption .header {
    display: flex;
}
.umap-caption .header i.icon {
    flex-shrink: 0;
}
.umap-caption button {
    background-color: var(--background-color);
    color: var(--text-color);
}
.umap-browser .main-toolbox {
    padding-left: 1.3rem; /* Align with toolbox below  */
    border-top: 1px solid var(--color-mediumGray);
    margin-top: var(--box-margin);
    padding-top: 3px;
    padding-bottom: 3px;
}
.umap-browser .main-toolbox i {
    cursor: pointer;
}


/* ********************************* */
/*      Tilelayer switcher           */
/* ********************************* */

.umap-edit-tilelayers li {
    border: 1px solid rgb(116, 116, 116);
    border-radius: 4px 4px 4px 4px;
    margin-bottom: 14px;
    overflow: hidden;
    position: relative;
    width: 256px;
    cursor: pointer;
    height: 200px;
    margin-left: auto;
    margin-right: auto;
}
.umap-edit-tilelayers li div {
    background-color: rgb(116, 116, 116);
    bottom: 0;
    color: rgb(247, 246, 241);
    height: 56px;
    line-height: 56px;
    opacity: 0.9;
    padding-inline-start: 10px;
    position: absolute;
    width: 100%;
    text-align: center;
}
.umap-edit-tilelayers li:hover div:before,
.umap-edit-tilelayers .selected div:before {
    content: "✓";
    font-size: 1.3em;
    line-height: 56px;
    padding-inline-end: 7px;
    position: absolute;
    inset-inline-start: 7px;
}
.umap-edit-tilelayers li img {
    display: block;
    max-width: 100%;
}

/* ********************************* */
/*            Caption                */
/* ********************************* */
.datalayer-color {
    display: inline-block;
    width: 16px;
    height: 16px;
    margin-inline-end: 10px;
    border: 1px solid #000;
    background-color: transparent;
    vertical-align: middle;
}

.caption-item {
    color: #555;
    padding: 6px 8px;
    box-shadow: 0 0 3px rgba(0,0,0,0.2);
    border-radius: 1px;
}
.caption-item ul {
    list-style-type: none;
    padding: 0;
    margin: 0;
}
.caption-item .circles-layer-legend {
    padding: var(--box-padding);
}
.circles-layer-legend li {
    display: flex;
    align-items: center;
    justify-content: space-between;
}
.circles-layer-legend li .circle {
    border-radius: 50%;
    display: inline-block;
    text-align: center;
}



/* ************* */
/* Marker's Icon */
/* ************* */
.umap-div-icon .icon_container {
    background-color: white;
    border-radius: 4px 4px 4px 4px;
    height: 32px;
    width: 32px;
    box-shadow: 7px 10px 8px -5px black;
    opacity: 0.9;
    background-color: #2470b5;
    text-align: center;
    line-height: 32px;
}
.umap-div-icon.umap-icon-active .icon_container {
    border-radius: 5px;
    box-shadow: 7px 10px 10px -1px black;
    height: 36px;
    line-height: 36px;
    margin-inline-start: -2px;
    margin-top: -4px;
    opacity: 1.0!important;
    width: 36px;
}
.umap-div-icon .icon_container img {
    vertical-align: middle;
    max-width: 24px!important; /* leaflet.css has !important, so... */
    max-height: 24px!important;
}
.umap-div-icon .icon_arrow {
    border-left: 8px solid transparent;
    border-right: 8px solid transparent;
    border-top: 8px solid #2270b5;
    height: 0;
    inset-inline-start: 8px;
    position: relative;
    width: 0;
    opacity: 0.9;
}
.umap-div-icon.umap-icon-active .icon_arrow {
    opacity: 1.0!important;
}
.umap-drop-icon .icon_arrow {
    border-left: 10px solid transparent;
    border-right: 10px solid transparent;
    border-top: 16px solid #2270B5;
    height: 0;
    inset-inline-start: 6px;
    position: relative;
    top: -4px;
    width: 0;
}
.umap-drop-icon.umap-icon-active .icon_arrow {
    border-left-width: 12px;
    border-right-width: 12px;
    border-top-width: 18px;
    inset-inline-start: 4px;
    opacity: 1.0!important;
}
.umap-drop-icon .icon_container {
    background-color: #2470B5;
    border-radius: 16px 16px 16px 16px;
    box-shadow: 6px 13px 8px -4px black;
    height: 32px;
    line-height: 32px;
    opacity: 0.9;
    text-align: center;
    width: 32px;
}
/* ... */

